fixed card width on mobile

--- a/assets/section-product-compare-view.css
+++ b/assets/section-product-compare-view.css
@@ -124,6 +124,10 @@ product-compare-view .heading-wrap {
 }
 
 @media (max-width: 768px) {
+  product-compare-view .compare-product-card {
+    max-width: 300px;
+  }
+
   product-compare-view .heading-wrap h2 {
     font-size: 24px;
   }
@@ -213,8 +217,8 @@ product-compare-view .compare-product-card {
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-width: 345px;
-  max-width: 345px;
+  min-width: 330px;
+  max-width: 330px;
   cursor: pointer;
   transition: transform 0.2s ease, box-shadow 0.1s ease;
 }
